--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "myrabbitmq",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "myRabbitMQ.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,17 +22,20 @@
     "url": "https://github.com/mydevhero/myRabbitMQ/issues"
   },
   "homepage": "https://github.com/mydevhero/myRabbitMQ#readme",
-    "devDependencies": {
+  "devDependencies": {
     "@types/amqplib": "^0.10.4",
     "@types/node": "^20.10.0",
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "amqplib": "^0.10.3"
+  },
+  "webpack": {
+    "config": "webpack.config.js"
   }
 }
