--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/mydevhero/myRabbitMQ#readme",
   "devDependencies": {
     "@types/amqplib": "^0.10.4",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.10.7",
     "amqplib": "^0.10.3",
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
@@ -32,6 +32,9 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "amqplib": "^0.10.3"
   },
   "webpack": {
     "config": "webpack.config.js"
