--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "baseUrl": "./src",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
-    }
+    },
+    "declaration": true
   },
   "include": [
     "src/**/*"
