--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/myRabbitMQ.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
