--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production"
   },
+  "engines": {
+    "node": ">=18",
+    "npm": ">=10"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mydevhero/myRabbitMQ.git"
