--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/myRabbitMQ.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production"
+    "build": "tsc"
   },
   "engines": {
     "node": ">=18",
@@ -18,7 +18,8 @@
   "keywords": [
     "rabbitmq",
     "cloud",
-    "nodejs"
+    "nodejs",
+    "message broker"
   ],
   "author": "Alessandro Bianco",
   "license": "MIT",
@@ -30,18 +31,9 @@
     "@types/amqplib": "^0.10.4",
     "@types/node": "^20.10.7",
     "amqplib": "^0.10.3",
-    "ts-loader": "^9.5.1",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "amqplib": "^0.10.3",
-    "tsconfig-paths-webpack-plugin": "^4.1.0"
-  },
-  "webpack": {
-    "config": "webpack.config.js"
+    "amqplib": "^0.10.3"
   }
 }
